--- a/mnist-test/mnist-deployment.yaml
+++ b/mnist-test/mnist-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: mnist
-        image: torpeden88/mnist-test:v1
+        image: torpeden88/mnist-test:latest
         command: ["/bin/sh"]
-        args: ["-c", "while true; do python3 mnist-test-local.py; sleep 100;done"]
+        args: ["-c", "while true; do python3 mnist-test.py; sleep 100;done"]
